# ctxos.github.io

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PRECOMMIT_RESULTS.md  PRECOMMIT_SETUP.md  PROJECT_REVIEW.md  README.md  REVIEW_PACKAGE_INDEX.md  STRUCTURE_COMPARISON.md  branding.json  install.sh  next.config.js  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  uninstall.sh
containers/: build.sh
debian/: install  postinst  postrm
docs/: CI_CD.md  ERROR_CODES.md  architecture.html  architecture.md  index.html  live-iso.md  packaging.md  recovery.md
lib/: api.ts  markdownToHtml.tsx
live-iso/: build-iso.sh  prepare-custom-packages.sh
locales/: en.json
mirror/: setup_mirror.sh
packaging/: build-debs.sh
pages/: 404.tsx  _app.tsx  _document.tsx  blog.tsx  careers.tsx  community.tsx  corsairs.tsx  donate.tsx  download.tsx  how-it-works.tsx  index.tsx  linktree.tsx  partners.tsx  privacy.tsx  store.tsx  team.tsx  warrant.tsx
profiles/: README.md  base.mk  desktop.mk  rescue.mk  server.mk
projects/: manifest.yaml
recovery/: rescue-tools.sh  system-check.sh
scripts/: docker-run.sh  fleet-manager.py  generate-metadata.sh  generate-release-notes.sh  generate_category_images.py  lib-errors.sh  lib.sh  log.sh  mirror-sync.sh  pipeline-master.sh  project-packager.sh  push-update.sh  release.sh  require-root.sh  run-pipeline.sh  run-vm.sh  security-audit.sh  validate-artifacts.sh  (+2 more)
(+1155 files in other folders)
